--- a/Acr.XamForms.BarCodeScanner.Droid/packages.config
+++ b/Acr.XamForms.BarCodeScanner.Droid/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Android.Support.v4" version="20.0.0.4" targetFramework="MonoAndroid22" />
+  <package id="Xamarin.Android.Support.v4" version="20.0.0.4" targetFramework="MonoAndroid22" requireReinstallation="True" />
   <package id="Xamarin.Forms" version="1.2.3.6257" targetFramework="MonoAndroid22" />
   <package id="ZXing.Net.Mobile" version="1.4.6" targetFramework="MonoAndroid22" />
 </packages>
