--- a/Components/btprogresshud-1.13/samples/BTProgressHUDSample/BTProgressHUDSample/Info.plist
+++ b/Components/btprogresshud-1.13/samples/BTProgressHUDSample/BTProgressHUDSample/Info.plist
@@ -10,6 +10,7 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
@@ -22,5 +23,9 @@
 	</array>
 	<key>MinimumOSVersion</key>
 	<string>5.0</string>
+	<key>XSAppIconAssets</key>
+	<string>Resources/Images.xcassets/AppIcons.appiconset</string>
+	<key>XSLaunchImageAssets</key>
+	<string>Resources/Images.xcassets/LaunchImage.launchimage</string>
 </dict>
 </plist>
