--- a/nuspec/Acr.XamForms.SignaturePad.nuspec
+++ b/nuspec/Acr.XamForms.SignaturePad.nuspec
@@ -12,11 +12,13 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>xamarin forms signaturepad</tags>
         <dependencies>
-            <dependency id="Xamarin.Forms" version="[1.2.3.6257, 2.0)" />
+            <dependency id="Xamarin.Forms" version="[1.3, 2.0)" />
         </dependencies>
         <releaseNotes>
-1.2
+1.3
 Simplified API
+Update to iOS unified
+Update to Xamarin Forms 1.3
 
 1.1.2
 Update to signaturepad 1.3.5
