--- a/nuspec/Acr.XamForms.UserDialogs.nuspec
+++ b/nuspec/Acr.XamForms.UserDialogs.nuspec
@@ -13,10 +13,10 @@
         <tags>xamarin forms dialogs</tags>
         <dependencies>
             <group>
-                <dependency id="Xamarin.Forms" version="[1.2.3.6257, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.3.6257, 2.0)" />
             </group>
             <group targetFramework="wp8">
-                <dependency id="Xamarin.Forms" version="[1.2.3.6257, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.3.6257, 2.0)" />
                 <dependency id="WPtoolkit" version="[4.2013.08.16, 5.0)" />
             </group>
         </dependencies>
@@ -25,6 +25,8 @@
 Tasks are now part of the interface again for easier mocking
 FIX: iOS7 dismiss and button index
 Update BTProgressHUD
+Update to iOS unified
+Update to Xamarin Forms 1.3
 
 2.1.2
 FIX: iOS8 iPad actionsheet
