--- a/nuspec/Acr.XamForms.Mobile.nuspec
+++ b/nuspec/Acr.XamForms.Mobile.nuspec
@@ -2,8 +2,8 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.Mobile</id>
-        <version>1.6</version>
-        <title>Mobile Services for Xamarin Forms</title>
+        <version>2.0</version>
+        <title>Mobile Service Plugins for Xamarin.Forms</title>
         <description>XPlat Camera-Gallery Access, Geo-Location, Settings, Network Detection, Phone, File System Management, SMS, and Logging for Xamarin Forms</description>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
@@ -12,11 +12,13 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>xamarin android ios winphone</tags>
         <dependencies>
-            <dependency id="Xamarin.Forms" version="[1.3, 2.0)" />
+            <dependency id="Xamarin.Forms" version="[1.3.1, 2.0)" />
             <dependency id="Newtonsoft.Json" version="[6.0, 7)" />
         </dependencies>
         <releaseNotes>
-1.6
+2.0
+Update to Unified API
+Update Xamarin.Mobile
 Fix iOS defect when reading properties on device info outside of main thread
 Clean out some useless services
 Fix Text-to-speech service on android
@@ -58,18 +60,18 @@ Initial Release
     </metadata>
     <files>
         <!-- PCL -->
-        <file src="..\bin\Release\Portable\Acr.XamForms.Mobile.dll" target="lib\portable-win+net45+MonoAndroid+MonoTouch+wp8\Acr.XamForms.Mobile.dll" />
+        <file src="..\bin\Release\Portable\Acr.XamForms.Mobile.dll" target="lib\portable-win+net45+MonoAndroid10+Xamarin.iOS10+wp8\Acr.XamForms.Mobile.dll" />
 
         <!-- droid -->
-        <file src="..\bin\Release\Portable\Acr.XamForms.Mobile.dll" target="lib\MonoAndroid\Acr.XamForms.Mobile.dll" />
-        <file src="..\bin\Release\MonoAndroid\Acr.XamForms.Mobile.Droid.dll" target="lib\MonoAndroid\Acr.XamForms.Mobile.Droid.dll" />
-        <file src="..\bin\Release\MonoAndroid\Xamarin.Mobile.dll" target="lib\MonoAndroid\Xamarin.Mobile.dll" />
+        <file src="..\bin\Release\Portable\Acr.XamForms.Mobile.dll" target="lib\MonoAndroid10\Acr.XamForms.Mobile.dll" />
+        <file src="..\bin\Release\MonoAndroid\Acr.XamForms.Mobile.Droid.dll" target="lib\MonoAndroid10\Acr.XamForms.Mobile.Droid.dll" />
+        <file src="..\bin\Release\MonoAndroid\Xamarin.Mobile.dll" target="lib\MonoAndroid10\Xamarin.Mobile.dll" />
         
         <!-- touch -->
-        <file src="..\bin\Release\Portable\Acr.XamForms.Mobile.dll" target="lib\MonoTouch\Acr.XamForms.Mobile.dll" />
-        <file src="..\bin\Release\MonoTouch\Acr.XamForms.Mobile.iOS.dll" target="lib\MonoTouch\Acr.XamForms.Mobile.iOS.dll" />
-        <file src="..\bin\Release\MonoTouch\Xamarin.Mobile.dll" target="lib\MonoTouch\Xamarin.Mobile.dll" />
-        <file src="Bootstrap\MobileBootstrap.cs.pp" target="content\MonoTouch\Bootstrap\MobileBootstrap.cs.pp" />
+        <file src="..\bin\Release\Portable\Acr.XamForms.Mobile.dll" target="lib\Xamarin.iOS10\Acr.XamForms.Mobile.dll" />
+        <file src="..\bin\Release\MonoTouch\Acr.XamForms.Mobile.iOS.dll" target="lib\Xamarin.iOS10\Acr.XamForms.Mobile.iOS.dll" />
+        <file src="..\bin\Release\MonoTouch\Xamarin.Mobile.dll" target="lib\Xamarin.iOS10\Xamarin.Mobile.dll" />
+        <file src="Bootstrap\MobileBootstrap.cs.pp" target="content\Xamarin.iOS10\Bootstrap\MobileBootstrap.cs.pp" />
 
         <!-- winphone -->
         <file src="..\bin\Release\Portable\Acr.XamForms.Mobile.dll" target="lib\wp8\Acr.XamForms.Mobile.dll" />
