--- a/nuspec/Acr.XamForms.SignaturePad.nuspec
+++ b/nuspec/Acr.XamForms.SignaturePad.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.SignaturePad</id>
-        <version>1.2.0</version>
+        <version>2.0.0</version>
         <title>Signature Pad for Xamarin.Forms</title>
         <description>Signature Pad view renderer and service dialog for Xamarin Forms</description>
         <authors>Allan Ritchie</authors>
@@ -12,10 +12,10 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>xamarin forms signaturepad</tags>
         <dependencies>
-            <dependency id="Xamarin.Forms" version="[1.3, 2.0)" />
+            <dependency id="Xamarin.Forms" version="[1.3.1, 2.0)" />
         </dependencies>
         <releaseNotes>
-1.3
+2.0
 Simplified API
 Update to iOS unified
 Update to Xamarin Forms 1.3
@@ -39,17 +39,17 @@ Initial Release
     </metadata>
     <files>
         <!-- PCL -->
-        <file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\portable-win+net45+MonoAndroid+MonoTouch+wp8\Acr.XamForms.SignaturePad.dll" />
+        <file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\portable-win+net45+MonoAndroid10+Xamarin.iOS10+wp8\Acr.XamForms.SignaturePad.dll" />
 
         <!-- droid -->
-        <file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\MonoAndroid\Acr.XamForms.SignaturePad.dll" />
-        <file src="..\bin\Release\MonoAndroid\Acr.XamForms.SignaturePad.Droid.dll" target="lib\MonoAndroid\Acr.XamForms.SignaturePad.Droid.dll" />
-        <file src="..\bin\Release\MonoAndroid\SignaturePad.Android.dll" target="lib\MonoAndroid\SignaturePad.Android.dll" />
+        <file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\MonoAndroid10\Acr.XamForms.SignaturePad.dll" />
+        <file src="..\bin\Release\MonoAndroid\Acr.XamForms.SignaturePad.Droid.dll" target="lib\MonoAndroid10\Acr.XamForms.SignaturePad.Droid.dll" />
+        <file src="..\bin\Release\MonoAndroid\SignaturePad.Android.dll" target="lib\MonoAndroid10\SignaturePad.Android.dll" />
 
         <!-- touch -->
-        <file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\MonoTouch\Acr.XamForms.SignaturePad.dll" />
-        <file src="..\bin\Release\MonoTouch\Acr.XamForms.SignaturePad.iOS.dll" target="lib\MonoTouch\Acr.XamForms.SignaturePad.iOS.dll" />
-        <file src="..\bin\Release\MonoTouch\SignaturePad.iOS.dll" target="lib\MonoTouch\SignaturePad.iOS.dll" />
-        <file src="Bootstrap\SignaturePadBootstrap.cs.pp" target="content\MonoTouch\Bootstrap\SignaturePadBootstrap.cs.pp" />
+        <file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\Xamarin.iOS10\Acr.XamForms.SignaturePad.dll" />
+        <file src="..\bin\Release\MonoTouch\Acr.XamForms.SignaturePad.iOS.dll" target="lib\Xamarin.iOS10\Acr.XamForms.SignaturePad.iOS.dll" />
+        <file src="..\bin\Release\MonoTouch\SignaturePad.iOS.dll" target="lib\Xamarin.iOS10\SignaturePad.iOS.dll" />
+        <file src="Bootstrap\SignaturePadBootstrap.cs.pp" target="content\Xamarin.iOS10\Bootstrap\SignaturePadBootstrap.cs.pp" />
     </files>
 </package>
