--- a/nuspec/Acr.XamForms.UserDialogs.nuspec
+++ b/nuspec/Acr.XamForms.UserDialogs.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.UserDialogs</id>
-        <version>2.2.0</version>
+        <version>3.0.0</version>
         <title>User Dialogs for Xamarin Forms</title>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
@@ -13,15 +13,15 @@
         <tags>xamarin forms dialogs</tags>
         <dependencies>
             <group>
-                <dependency id="Xamarin.Forms" version="[1.3, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.3.1, 2.0)" />
             </group>
             <group targetFramework="wp8">
-                <dependency id="Xamarin.Forms" version="[1.3, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.3.1, 2.0)" />
                 <dependency id="WPtoolkit" version="[4.2013.08.16, 5.0)" />
             </group>
         </dependencies>
         <releaseNotes>
-2.2
+3.0
 Tasks are now part of the interface again for easier mocking
 FIX: iOS7 dismiss and button index
 Update BTProgressHUD
@@ -56,18 +56,18 @@ Initial Release
     </metadata>
     <files>
         <!-- PCL -->
-        <file src="..\bin\Release\Portable\Acr.XamForms.UserDialogs.dll" target="lib\portable-win+net45+MonoAndroid+MonoTouch+wp8\Acr.XamForms.UserDialogs.dll" />
+        <file src="..\bin\Release\Portable\Acr.XamForms.UserDialogs.dll" target="lib\portable-win+net45+MonoAndroid10+Xamarin.iOS10+wp8\Acr.XamForms.UserDialogs.dll" />
 
         <!-- droid -->
-        <file src="..\bin\Release\Portable\Acr.XamForms.UserDialogs.dll" target="lib\MonoAndroid\Acr.XamForms.UserDialogs.dll" />
-        <file src="..\bin\Release\MonoAndroid\Acr.XamForms.UserDialogs.Droid.dll" target="lib\MonoAndroid\Acr.XamForms.UserDialogs.Droid.dll" />
-        <file src="..\bin\Release\MonoAndroid\AndHUD.dll" target="lib\MonoAndroid\AndHUD.dll" />
+        <file src="..\bin\Release\Portable\Acr.XamForms.UserDialogs.dll" target="lib\MonoAndroid10\Acr.XamForms.UserDialogs.dll" />
+        <file src="..\bin\Release\MonoAndroid\Acr.XamForms.UserDialogs.Droid.dll" target="lib\MonoAndroid10\Acr.XamForms.UserDialogs.Droid.dll" />
+        <file src="..\bin\Release\MonoAndroid\AndHUD.dll" target="lib\MonoAndroid10\AndHUD.dll" />
 
         <!-- ios -->
-        <file src="..\bin\Release\Portable\Acr.XamForms.UserDialogs.dll" target="lib\MonoTouch\Acr.XamForms.UserDialogs.dll" />
-        <file src="..\bin\Release\MonoTouch\Acr.XamForms.UserDialogs.iOS.dll" target="lib\MonoTouch\Acr.XamForms.UserDialogs.iOS.dll" />
-        <file src="..\bin\Release\MonoTouch\BTProgressHUD.dll" target="lib\MonoTouch\BTProgressHUD.dll" />
-        <file src="Bootstrap\UserDialogsBootstrap.cs.pp" target="content\MonoTouch\Bootstrap\UserDialogsBootstrap.cs.pp" />
+        <file src="..\bin\Release\Portable\Acr.XamForms.UserDialogs.dll" target="lib\Xamarin.iOS10\Acr.XamForms.UserDialogs.dll" />
+        <file src="..\bin\Release\MonoTouch\Acr.XamForms.UserDialogs.iOS.dll" target="lib\Xamarin.iOS10\Acr.XamForms.UserDialogs.iOS.dll" />
+        <file src="..\bin\Release\MonoTouch\BTProgressHUD.dll" target="lib\Xamarin.iOS10\BTProgressHUD.dll" />
+        <file src="Bootstrap\UserDialogsBootstrap.cs.pp" target="content\Xamarin.iOS10\Bootstrap\UserDialogsBootstrap.cs.pp" />
 
         <!-- winphone -->
         <file src="..\bin\Release\Portable\Acr.XamForms.UserDialogs.dll" target="lib\wp8\Acr.XamForms.UserDialogs.dll" />
