--- a/nuspec/Acr.XamForms.nuspec
+++ b/nuspec/Acr.XamForms.nuspec
@@ -9,10 +9,10 @@
         <owners>Allan Ritchie</owners>
         <licenseUrl>http://opensource.org/licenses/ms-pl.html</licenseUrl>
         <projectUrl>https://github.com/aritchie/acr-xamarin-forms</projectUrl>
-        <requireLicenseAcceptance>false</requireLicenseAcceptance>		
+        <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>xamarin</tags>
         <dependencies>
-            <dependency id="Xamarin.Forms" version="[1.3.0, 2.0)" />
+            <dependency id="Xamarin.Forms" version="[1.3.1, 2.0)" />
         </dependencies>
         <releaseNotes>
 2.0
@@ -30,8 +30,8 @@ Adding lifecycle events
 Initial Release
         </releaseNotes>
     </metadata>
-    <files>		
+    <files>
         <!-- PCL -->
-        <file src="..\bin\Release\Portable\Acr.XamForms.dll" target="lib\portable-win+net45+MonoAndroid+MonoTouch+wp8\Acr.XamForms.dll" />
+        <file src="..\bin\Release\Portable\Acr.XamForms.dll" target="lib\portable-win+net45+MonoAndroid10+Xamarin.iOS10+wp8\Acr.XamForms.dll" />
     </files>
 </package>
