--- a/nuspec/Acr.XamForms.BarCodeScanner.nuspec
+++ b/nuspec/Acr.XamForms.BarCodeScanner.nuspec
@@ -3,7 +3,7 @@
     <metadata>
         <id>Acr.XamForms.BarCodeScanner</id>
         <version>2.0.0</version>
-        <title>BarCode Scanner for Xamarin Forms</title>
+        <title>Barcode Plugin for Xamarin.Forms</title>
         <description>Barcode scanning for Xamarin Forms built on ZXing.Net.Mobile for Xamarin Forms</description>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
