--- a/nuspec/Acr.XamForms.Mobile.nuspec
+++ b/nuspec/Acr.XamForms.Mobile.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.Mobile</id>
-        <version>2.0.1</version>
+        <version>2.0.2</version>
         <title>Mobile Service Plugins for Xamarin.Forms</title>
         <description>
 Includes several essentials services for development with Xamarin.Forms
@@ -24,10 +24,13 @@ Includes several essentials services for development with Xamarin.Forms
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>xamarin android ios winphone</tags>
         <dependencies>
-            <dependency id="Xamarin.Forms" version="[1.3.2.6316, 2.0)" />
+            <dependency id="Xamarin.Forms" version="[1.3.3.6323, 2.0)" />
             <dependency id="Newtonsoft.Json" version="[6.0, 7)" />
         </dependencies>
         <releaseNotes>
+2.0.2
+Update to Xamarin.Forms 1.3.3
+
 2.0.1
 Update to Xamarin.Forms 1.3.2
 
