--- a/nuspec/Acr.XamForms.SignaturePad.nuspec
+++ b/nuspec/Acr.XamForms.SignaturePad.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.SignaturePad</id>
-        <version>2.0.1</version>
+        <version>2.0.2</version>
         <title>Signature Pad for Xamarin.Forms</title>
         <description>Signature Pad view renderer and service dialog for Xamarin Forms</description>
         <authors>Allan Ritchie</authors>
@@ -12,9 +12,12 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>xamarin forms signaturepad</tags>
         <dependencies>
-            <dependency id="Xamarin.Forms" version="[1.3.2.6316, 2.0)" />
+            <dependency id="Xamarin.Forms" version="[1.3.3.6323, 2.0)" />
         </dependencies>
         <releaseNotes>
+2.0.2
+Update to Xamarin.Forms 1.3.3
+
 2.0.1
 Update to Xamarin.Forms 1.3.2
 
