--- a/nuspec/Acr.XamForms.UserDialogs.nuspec
+++ b/nuspec/Acr.XamForms.UserDialogs.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.UserDialogs</id>
-        <version>3.0.3</version>
+        <version>3.0.4</version>
         <title>User Dialogs Plugin for Xamarin.Forms</title>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
@@ -23,16 +23,16 @@ This plugin for Xamarin.Forms contains several useful dialogs that you can call 
         <tags>xamarin forms dialogs</tags>
         <dependencies>
             <group>
-                <dependency id="Xamarin.Forms" version="[1.3.4.6332, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.4.0.6341, 2.0)" />
             </group>
             <group targetFramework="wp8">
-                <dependency id="Xamarin.Forms" version="[1.3.4.6332, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.4.0.6341, 2.0)" />
                 <dependency id="WPtoolkit" version="[4.2013.08.16, 5.0)" />
             </group>
         </dependencies>
         <releaseNotes>
-Update to Xamarin.Forms 1.3.4
-!!!!!!!!!!!!!!! PLEASE USE Acr.BarCodes GOING FORWARD - THIS LIBRARY WILL SOON BE DEPRECATED!!!!!!!!!!!!!!!!!!!
+Update to Xamarin.Forms 1.4.0
+!!!!!!!!!!!!!!! PLEASE USE Acr.UserDialogs GOING FORWARD - THIS LIBRARY WILL SOON BE DEPRECATED!!!!!!!!!!!!!!!!!!!
         </releaseNotes>
     </metadata>
     <files>
