Add support for setting keyboard type in the prompt text field i.e phone, numeric and email.

--- a/Acr.XamForms.UserDialogs/Acr.XamForms.UserDialogs.csproj
+++ b/Acr.XamForms.UserDialogs/Acr.XamForms.UserDialogs.csproj
@@ -41,6 +41,7 @@
     <Compile Include="ActionSheetConfig.cs" />
     <Compile Include="AlertConfig.cs" />
     <Compile Include="ConfirmConfig.cs" />
+    <Compile Include="Keyboard.cs" />
     <Compile Include="LoginConfig.cs" />
     <Compile Include="LoginResult.cs" />
     <Compile Include="IUserDialogService.cs" />
