--- a/Acr.XamForms.SignaturePad.Windows8/Acr.XamForms.SignaturePad.Windows8.csproj
+++ b/Acr.XamForms.SignaturePad.Windows8/Acr.XamForms.SignaturePad.Windows8.csproj
@@ -31,7 +31,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\bin\Release\WindowsRT\</OutputPath>
     <DefineConstants>TRACE;NETFX_CORE;WINDOWS_APP</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
